--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <span id="min" class="dis">00</span>
             <span class="col">:</span>
             <span id="sec" class="dis">00</span>
-            <span class="col">:</span>
+            <span class="col">.</span>
             <span id="ms" class="dis">00</span>
         </div>
 
